src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LPAREN
    PATH
    RPAREN
    TRIM

Grammar

Rule 0     S' -> videout
Rule 1     videout -> var_assign
Rule 2     videout -> methodcall
Rule 3     videout -> NUMBER
Rule 4     videout -> BOOLEAN
Rule 5     videout -> empty
Rule 6     var_assign -> IDENTIFIER ASSIGN Init
Rule 7     var_assign -> IDENTIFIER ASSIGN STRING
Rule 8     var_assign -> IDENTIFIER ASSIGN NUMBER
Rule 9     var_assign -> IDENTIFIER ASSIGN BOOLEAN
Rule 10    var_assign -> IDENTIFIER ASSIGN IDENTIFIER
Rule 11    Init -> videoInit
Rule 12    Init -> photoInit
Rule 13    Init -> concatenateClip
Rule 14    videoInit -> VIDEO FROM STRING BETWEEN INT COMMA INT AND INT COMMA INT
Rule 15    photoInit -> PHOTO FROM STRING LASTING INT
Rule 16    concatenateClip -> CONCATENATE_CLIP IDENTIFIER AND IDENTIFIER
Rule 17    methodcall -> resizemethod
Rule 18    methodcall -> addTextmethod
Rule 19    methodcall -> renderVideo
Rule 20    methodcall -> renderGif
Rule 21    methodcall -> cropmethod
Rule 22    methodcall -> addAudiomethod
Rule 23    methodcall -> addExtractedAudiomethod
Rule 24    methodcall -> showVarmethod
Rule 25    methodcall -> showAllVarsmethod
Rule 26    showVarmethod -> IDENTIFIER
Rule 27    showAllVarsmethod -> SHOW_VARS
Rule 28    resizemethod -> RESIZE IDENTIFIER BY NUMBER
Rule 29    cropmethod -> CROP IDENTIFIER BY ASPECT_RATIO
Rule 30    addAudiomethod -> ADD_AUDIO STRING TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER
Rule 31    addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER
Rule 32    addTextmethod -> ADD_TEXT STRING TO IDENTIFIER TO POSITION
Rule 33    renderVideo -> RENDER_VIDEO IDENTIFIER
Rule 34    renderGif -> RENDER_GIF FROM IDENTIFIER
Rule 35    BOOLEAN -> BOOL
Rule 36    NUMBER -> INT
Rule 37    NUMBER -> FLOAT
Rule 38    empty -> <empty>

Terminals, with rules where they appear

ADD_AUDIO            : 30
ADD_TEXT             : 32
AND                  : 14 16
ASPECT_RATIO         : 29
ASSIGN               : 6 7 8 9 10
BETWEEN              : 14 30 31
BOOL                 : 35
BY                   : 28 29
COMMA                : 14 14 30 31
CONCATENATE_CLIP     : 16
CROP                 : 29
EXTRACT_AUDIO        : 31
FLOAT                : 37
FROM                 : 14 15 34
IDENTIFIER           : 6 7 8 9 10 10 16 16 26 28 29 30 31 31 32 33 34
INT                  : 14 14 14 14 15 36
LASTING              : 15
LPAREN               : 
PATH                 : 
PHOTO                : 15
POSITION             : 32
RENDER_GIF           : 34
RENDER_VIDEO         : 33
RESIZE               : 28
RPAREN               : 
SHOW_VARS            : 27
STRING               : 7 14 15 30 32
TO                   : 30 31 32 32
TRIM                 : 
VIDEO                : 14
error                : 

Nonterminals, with rules where they appear

BOOLEAN              : 4 9
Init                 : 6
NUMBER               : 3 8 28 30 30 31 31
addAudiomethod       : 22
addExtractedAudiomethod : 23
addTextmethod        : 18
concatenateClip      : 13
cropmethod           : 21
empty                : 5
methodcall           : 2
photoInit            : 12
renderGif            : 20
renderVideo          : 19
resizemethod         : 17
showAllVarsmethod    : 25
showVarmethod        : 24
var_assign           : 1
videoInit            : 11
videout              : 0

Parsing method: LALR

state 0

    (0) S' -> . videout
    (1) videout -> . var_assign
    (2) videout -> . methodcall
    (3) videout -> . NUMBER
    (4) videout -> . BOOLEAN
    (5) videout -> . empty
    (6) var_assign -> . IDENTIFIER ASSIGN Init
    (7) var_assign -> . IDENTIFIER ASSIGN STRING
    (8) var_assign -> . IDENTIFIER ASSIGN NUMBER
    (9) var_assign -> . IDENTIFIER ASSIGN BOOLEAN
    (10) var_assign -> . IDENTIFIER ASSIGN IDENTIFIER
    (17) methodcall -> . resizemethod
    (18) methodcall -> . addTextmethod
    (19) methodcall -> . renderVideo
    (20) methodcall -> . renderGif
    (21) methodcall -> . cropmethod
    (22) methodcall -> . addAudiomethod
    (23) methodcall -> . addExtractedAudiomethod
    (24) methodcall -> . showVarmethod
    (25) methodcall -> . showAllVarsmethod
    (36) NUMBER -> . INT
    (37) NUMBER -> . FLOAT
    (35) BOOLEAN -> . BOOL
    (38) empty -> .
    (28) resizemethod -> . RESIZE IDENTIFIER BY NUMBER
    (32) addTextmethod -> . ADD_TEXT STRING TO IDENTIFIER TO POSITION
    (33) renderVideo -> . RENDER_VIDEO IDENTIFIER
    (34) renderGif -> . RENDER_GIF FROM IDENTIFIER
    (29) cropmethod -> . CROP IDENTIFIER BY ASPECT_RATIO
    (30) addAudiomethod -> . ADD_AUDIO STRING TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER
    (31) addExtractedAudiomethod -> . EXTRACT_AUDIO IDENTIFIER TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER
    (26) showVarmethod -> . IDENTIFIER
    (27) showAllVarsmethod -> . SHOW_VARS

    IDENTIFIER      shift and go to state 7
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    $end            reduce using rule 38 (empty -> .)
    RESIZE          shift and go to state 20
    ADD_TEXT        shift and go to state 21
    RENDER_VIDEO    shift and go to state 22
    RENDER_GIF      shift and go to state 23
    CROP            shift and go to state 24
    ADD_AUDIO       shift and go to state 25
    EXTRACT_AUDIO   shift and go to state 26
    SHOW_VARS       shift and go to state 27

    videout                        shift and go to state 1
    var_assign                     shift and go to state 2
    methodcall                     shift and go to state 3
    NUMBER                         shift and go to state 4
    BOOLEAN                        shift and go to state 5
    empty                          shift and go to state 6
    resizemethod                   shift and go to state 8
    addTextmethod                  shift and go to state 9
    renderVideo                    shift and go to state 10
    renderGif                      shift and go to state 11
    cropmethod                     shift and go to state 12
    addAudiomethod                 shift and go to state 13
    addExtractedAudiomethod        shift and go to state 14
    showVarmethod                  shift and go to state 15
    showAllVarsmethod              shift and go to state 16

state 1

    (0) S' -> videout .



state 2

    (1) videout -> var_assign .

    $end            reduce using rule 1 (videout -> var_assign .)


state 3

    (2) videout -> methodcall .

    $end            reduce using rule 2 (videout -> methodcall .)


state 4

    (3) videout -> NUMBER .

    $end            reduce using rule 3 (videout -> NUMBER .)


state 5

    (4) videout -> BOOLEAN .

    $end            reduce using rule 4 (videout -> BOOLEAN .)


state 6

    (5) videout -> empty .

    $end            reduce using rule 5 (videout -> empty .)


state 7

    (6) var_assign -> IDENTIFIER . ASSIGN Init
    (7) var_assign -> IDENTIFIER . ASSIGN STRING
    (8) var_assign -> IDENTIFIER . ASSIGN NUMBER
    (9) var_assign -> IDENTIFIER . ASSIGN BOOLEAN
    (10) var_assign -> IDENTIFIER . ASSIGN IDENTIFIER
    (26) showVarmethod -> IDENTIFIER .

    ASSIGN          shift and go to state 28
    $end            reduce using rule 26 (showVarmethod -> IDENTIFIER .)


state 8

    (17) methodcall -> resizemethod .

    $end            reduce using rule 17 (methodcall -> resizemethod .)


state 9

    (18) methodcall -> addTextmethod .

    $end            reduce using rule 18 (methodcall -> addTextmethod .)


state 10

    (19) methodcall -> renderVideo .

    $end            reduce using rule 19 (methodcall -> renderVideo .)


state 11

    (20) methodcall -> renderGif .

    $end            reduce using rule 20 (methodcall -> renderGif .)


state 12

    (21) methodcall -> cropmethod .

    $end            reduce using rule 21 (methodcall -> cropmethod .)


state 13

    (22) methodcall -> addAudiomethod .

    $end            reduce using rule 22 (methodcall -> addAudiomethod .)


state 14

    (23) methodcall -> addExtractedAudiomethod .

    $end            reduce using rule 23 (methodcall -> addExtractedAudiomethod .)


state 15

    (24) methodcall -> showVarmethod .

    $end            reduce using rule 24 (methodcall -> showVarmethod .)


state 16

    (25) methodcall -> showAllVarsmethod .

    $end            reduce using rule 25 (methodcall -> showAllVarsmethod .)


state 17

    (36) NUMBER -> INT .

    $end            reduce using rule 36 (NUMBER -> INT .)
    COMMA           reduce using rule 36 (NUMBER -> INT .)


state 18

    (37) NUMBER -> FLOAT .

    $end            reduce using rule 37 (NUMBER -> FLOAT .)
    COMMA           reduce using rule 37 (NUMBER -> FLOAT .)


state 19

    (35) BOOLEAN -> BOOL .

    $end            reduce using rule 35 (BOOLEAN -> BOOL .)


state 20

    (28) resizemethod -> RESIZE . IDENTIFIER BY NUMBER

    IDENTIFIER      shift and go to state 29


state 21

    (32) addTextmethod -> ADD_TEXT . STRING TO IDENTIFIER TO POSITION

    STRING          shift and go to state 30


state 22

    (33) renderVideo -> RENDER_VIDEO . IDENTIFIER

    IDENTIFIER      shift and go to state 31


state 23

    (34) renderGif -> RENDER_GIF . FROM IDENTIFIER

    FROM            shift and go to state 32


state 24

    (29) cropmethod -> CROP . IDENTIFIER BY ASPECT_RATIO

    IDENTIFIER      shift and go to state 33


state 25

    (30) addAudiomethod -> ADD_AUDIO . STRING TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER

    STRING          shift and go to state 34


state 26

    (31) addExtractedAudiomethod -> EXTRACT_AUDIO . IDENTIFIER TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER

    IDENTIFIER      shift and go to state 35


state 27

    (27) showAllVarsmethod -> SHOW_VARS .

    $end            reduce using rule 27 (showAllVarsmethod -> SHOW_VARS .)


state 28

    (6) var_assign -> IDENTIFIER ASSIGN . Init
    (7) var_assign -> IDENTIFIER ASSIGN . STRING
    (8) var_assign -> IDENTIFIER ASSIGN . NUMBER
    (9) var_assign -> IDENTIFIER ASSIGN . BOOLEAN
    (10) var_assign -> IDENTIFIER ASSIGN . IDENTIFIER
    (11) Init -> . videoInit
    (12) Init -> . photoInit
    (13) Init -> . concatenateClip
    (36) NUMBER -> . INT
    (37) NUMBER -> . FLOAT
    (35) BOOLEAN -> . BOOL
    (14) videoInit -> . VIDEO FROM STRING BETWEEN INT COMMA INT AND INT COMMA INT
    (15) photoInit -> . PHOTO FROM STRING LASTING INT
    (16) concatenateClip -> . CONCATENATE_CLIP IDENTIFIER AND IDENTIFIER

    STRING          shift and go to state 38
    IDENTIFIER      shift and go to state 36
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 19
    VIDEO           shift and go to state 44
    PHOTO           shift and go to state 45
    CONCATENATE_CLIP shift and go to state 46

    Init                           shift and go to state 37
    NUMBER                         shift and go to state 39
    BOOLEAN                        shift and go to state 40
    videoInit                      shift and go to state 41
    photoInit                      shift and go to state 42
    concatenateClip                shift and go to state 43

state 29

    (28) resizemethod -> RESIZE IDENTIFIER . BY NUMBER

    BY              shift and go to state 47


state 30

    (32) addTextmethod -> ADD_TEXT STRING . TO IDENTIFIER TO POSITION

    TO              shift and go to state 48


state 31

    (33) renderVideo -> RENDER_VIDEO IDENTIFIER .

    $end            reduce using rule 33 (renderVideo -> RENDER_VIDEO IDENTIFIER .)


state 32

    (34) renderGif -> RENDER_GIF FROM . IDENTIFIER

    IDENTIFIER      shift and go to state 49


state 33

    (29) cropmethod -> CROP IDENTIFIER . BY ASPECT_RATIO

    BY              shift and go to state 50


state 34

    (30) addAudiomethod -> ADD_AUDIO STRING . TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER

    TO              shift and go to state 51


state 35

    (31) addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER . TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER

    TO              shift and go to state 52


state 36

    (10) var_assign -> IDENTIFIER ASSIGN IDENTIFIER .

    $end            reduce using rule 10 (var_assign -> IDENTIFIER ASSIGN IDENTIFIER .)


state 37

    (6) var_assign -> IDENTIFIER ASSIGN Init .

    $end            reduce using rule 6 (var_assign -> IDENTIFIER ASSIGN Init .)


state 38

    (7) var_assign -> IDENTIFIER ASSIGN STRING .

    $end            reduce using rule 7 (var_assign -> IDENTIFIER ASSIGN STRING .)


state 39

    (8) var_assign -> IDENTIFIER ASSIGN NUMBER .

    $end            reduce using rule 8 (var_assign -> IDENTIFIER ASSIGN NUMBER .)


state 40

    (9) var_assign -> IDENTIFIER ASSIGN BOOLEAN .

    $end            reduce using rule 9 (var_assign -> IDENTIFIER ASSIGN BOOLEAN .)


state 41

    (11) Init -> videoInit .

    $end            reduce using rule 11 (Init -> videoInit .)


state 42

    (12) Init -> photoInit .

    $end            reduce using rule 12 (Init -> photoInit .)


state 43

    (13) Init -> concatenateClip .

    $end            reduce using rule 13 (Init -> concatenateClip .)


state 44

    (14) videoInit -> VIDEO . FROM STRING BETWEEN INT COMMA INT AND INT COMMA INT

    FROM            shift and go to state 53


state 45

    (15) photoInit -> PHOTO . FROM STRING LASTING INT

    FROM            shift and go to state 54


state 46

    (16) concatenateClip -> CONCATENATE_CLIP . IDENTIFIER AND IDENTIFIER

    IDENTIFIER      shift and go to state 55


state 47

    (28) resizemethod -> RESIZE IDENTIFIER BY . NUMBER
    (36) NUMBER -> . INT
    (37) NUMBER -> . FLOAT

    INT             shift and go to state 17
    FLOAT           shift and go to state 18

    NUMBER                         shift and go to state 56

state 48

    (32) addTextmethod -> ADD_TEXT STRING TO . IDENTIFIER TO POSITION

    IDENTIFIER      shift and go to state 57


state 49

    (34) renderGif -> RENDER_GIF FROM IDENTIFIER .

    $end            reduce using rule 34 (renderGif -> RENDER_GIF FROM IDENTIFIER .)


state 50

    (29) cropmethod -> CROP IDENTIFIER BY . ASPECT_RATIO

    ASPECT_RATIO    shift and go to state 58


state 51

    (30) addAudiomethod -> ADD_AUDIO STRING TO . IDENTIFIER BETWEEN NUMBER COMMA NUMBER

    IDENTIFIER      shift and go to state 59


state 52

    (31) addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER TO . IDENTIFIER BETWEEN NUMBER COMMA NUMBER

    IDENTIFIER      shift and go to state 60


state 53

    (14) videoInit -> VIDEO FROM . STRING BETWEEN INT COMMA INT AND INT COMMA INT

    STRING          shift and go to state 61


state 54

    (15) photoInit -> PHOTO FROM . STRING LASTING INT

    STRING          shift and go to state 62


state 55

    (16) concatenateClip -> CONCATENATE_CLIP IDENTIFIER . AND IDENTIFIER

    AND             shift and go to state 63


state 56

    (28) resizemethod -> RESIZE IDENTIFIER BY NUMBER .

    $end            reduce using rule 28 (resizemethod -> RESIZE IDENTIFIER BY NUMBER .)


state 57

    (32) addTextmethod -> ADD_TEXT STRING TO IDENTIFIER . TO POSITION

    TO              shift and go to state 64


state 58

    (29) cropmethod -> CROP IDENTIFIER BY ASPECT_RATIO .

    $end            reduce using rule 29 (cropmethod -> CROP IDENTIFIER BY ASPECT_RATIO .)


state 59

    (30) addAudiomethod -> ADD_AUDIO STRING TO IDENTIFIER . BETWEEN NUMBER COMMA NUMBER

    BETWEEN         shift and go to state 65


state 60

    (31) addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER TO IDENTIFIER . BETWEEN NUMBER COMMA NUMBER

    BETWEEN         shift and go to state 66


state 61

    (14) videoInit -> VIDEO FROM STRING . BETWEEN INT COMMA INT AND INT COMMA INT

    BETWEEN         shift and go to state 67


state 62

    (15) photoInit -> PHOTO FROM STRING . LASTING INT

    LASTING         shift and go to state 68


state 63

    (16) concatenateClip -> CONCATENATE_CLIP IDENTIFIER AND . IDENTIFIER

    IDENTIFIER      shift and go to state 69


state 64

    (32) addTextmethod -> ADD_TEXT STRING TO IDENTIFIER TO . POSITION

    POSITION        shift and go to state 70


state 65

    (30) addAudiomethod -> ADD_AUDIO STRING TO IDENTIFIER BETWEEN . NUMBER COMMA NUMBER
    (36) NUMBER -> . INT
    (37) NUMBER -> . FLOAT

    INT             shift and go to state 17
    FLOAT           shift and go to state 18

    NUMBER                         shift and go to state 71

state 66

    (31) addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER TO IDENTIFIER BETWEEN . NUMBER COMMA NUMBER
    (36) NUMBER -> . INT
    (37) NUMBER -> . FLOAT

    INT             shift and go to state 17
    FLOAT           shift and go to state 18

    NUMBER                         shift and go to state 72

state 67

    (14) videoInit -> VIDEO FROM STRING BETWEEN . INT COMMA INT AND INT COMMA INT

    INT             shift and go to state 73


state 68

    (15) photoInit -> PHOTO FROM STRING LASTING . INT

    INT             shift and go to state 74


state 69

    (16) concatenateClip -> CONCATENATE_CLIP IDENTIFIER AND IDENTIFIER .

    $end            reduce using rule 16 (concatenateClip -> CONCATENATE_CLIP IDENTIFIER AND IDENTIFIER .)


state 70

    (32) addTextmethod -> ADD_TEXT STRING TO IDENTIFIER TO POSITION .

    $end            reduce using rule 32 (addTextmethod -> ADD_TEXT STRING TO IDENTIFIER TO POSITION .)


state 71

    (30) addAudiomethod -> ADD_AUDIO STRING TO IDENTIFIER BETWEEN NUMBER . COMMA NUMBER

    COMMA           shift and go to state 75


state 72

    (31) addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER TO IDENTIFIER BETWEEN NUMBER . COMMA NUMBER

    COMMA           shift and go to state 76


state 73

    (14) videoInit -> VIDEO FROM STRING BETWEEN INT . COMMA INT AND INT COMMA INT

    COMMA           shift and go to state 77


state 74

    (15) photoInit -> PHOTO FROM STRING LASTING INT .

    $end            reduce using rule 15 (photoInit -> PHOTO FROM STRING LASTING INT .)


state 75

    (30) addAudiomethod -> ADD_AUDIO STRING TO IDENTIFIER BETWEEN NUMBER COMMA . NUMBER
    (36) NUMBER -> . INT
    (37) NUMBER -> . FLOAT

    INT             shift and go to state 17
    FLOAT           shift and go to state 18

    NUMBER                         shift and go to state 78

state 76

    (31) addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER TO IDENTIFIER BETWEEN NUMBER COMMA . NUMBER
    (36) NUMBER -> . INT
    (37) NUMBER -> . FLOAT

    INT             shift and go to state 17
    FLOAT           shift and go to state 18

    NUMBER                         shift and go to state 79

state 77

    (14) videoInit -> VIDEO FROM STRING BETWEEN INT COMMA . INT AND INT COMMA INT

    INT             shift and go to state 80


state 78

    (30) addAudiomethod -> ADD_AUDIO STRING TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER .

    $end            reduce using rule 30 (addAudiomethod -> ADD_AUDIO STRING TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER .)


state 79

    (31) addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER .

    $end            reduce using rule 31 (addExtractedAudiomethod -> EXTRACT_AUDIO IDENTIFIER TO IDENTIFIER BETWEEN NUMBER COMMA NUMBER .)


state 80

    (14) videoInit -> VIDEO FROM STRING BETWEEN INT COMMA INT . AND INT COMMA INT

    AND             shift and go to state 81


state 81

    (14) videoInit -> VIDEO FROM STRING BETWEEN INT COMMA INT AND . INT COMMA INT

    INT             shift and go to state 82


state 82

    (14) videoInit -> VIDEO FROM STRING BETWEEN INT COMMA INT AND INT . COMMA INT

    COMMA           shift and go to state 83


state 83

    (14) videoInit -> VIDEO FROM STRING BETWEEN INT COMMA INT AND INT COMMA . INT

    INT             shift and go to state 84


state 84

    (14) videoInit -> VIDEO FROM STRING BETWEEN INT COMMA INT AND INT COMMA INT .

    $end            reduce using rule 14 (videoInit -> VIDEO FROM STRING BETWEEN INT COMMA INT AND INT COMMA INT .)

